2.7.5 - Adicionado comentarios nos sistemas de token, adicionado sistema de paginacao, e melhoria no sistema de erros